crates/wac-parser/tests/resolution/fail/world-include-with-conflict.wac
package test:comp;

world w1 {
    export a: func();
}

world w2 {
    include w1 with { a as x };
    export x: interface {

    };
}